--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="contact-form">
-                        <form id="contact-form" method="post" action="contact-form-handler.php">
+                        <form id="contact-form" method="post" action="">
                             <input name="fullname" type="text" class="form-control" placeholder=" Your Name" required>
                             <br>
                             <input name="email" type="email" class="form-control" placeholder=" Your Email" 
