--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
         <div class="loader-section section-right"></div>
     </div>
     <div class="container">
-       
-       <!-- ======= Top Header Section ======= -->
-        <div class="header">
+        <!-- ======= Header Section ======= -->
+        <section class="tm-section-head">
+            <header id="header" class="text-center tm-text-gray">
+                       <!-- ======= Top Header Section ======= -->
+        <div class="headers">
             <a name="top"></a>
             <div class="desktop">
                 <div class="row align-items-center">
@@ -101,10 +103,6 @@
                 <hr class="my-1">
             </div>
         </div><!-- End Our Top Header Section -->
-
-        <!-- ======= Header Section ======= -->
-        <section class="tm-section-head" id="top">
-            <header id="header" class="text-center tm-text-gray">
                 <div class="desktop">
                     <img src="in-use/logo.jpg" width="10%" height="10%">
                 </div>
