--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
         <div class="loader-section section-right"></div>
     </div>
     <div class="container">
-        <!-- ======= Header Section ======= -->
-        <section class="tm-section-head">
-            <header id="header" class="text-center tm-text-gray">
-                       <!-- ======= Top Header Section ======= -->
+       
+       <!-- ======= Top Header Section ======= -->
         <div class="headers">
             <a name="top"></a>
             <div class="desktop">
@@ -103,6 +101,10 @@
                 <hr class="my-1">
             </div>
         </div><!-- End Our Top Header Section -->
+
+        <!-- ======= Header Section ======= -->
+        <section class="tm-section-head">
+            <header id="header" class="text-center tm-text-gray">
                 <div class="desktop">
                     <img src="in-use/logo.jpg" width="10%" height="10%">
                 </div>
@@ -301,7 +303,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="contact-form">
-                        <form id="contact-form" method="post" action="">
+                        <form id="contact-form" method="post" action="contact-form-handler.php">
                             <input name="fullname" type="text" class="form-control" placeholder=" Your Name" required>
                             <br>
                             <input name="email" type="email" class="form-control" placeholder=" Your Email" 
