--- a/index.html
+++ b/index.html
@@ -304,17 +304,12 @@
                 <div class="col-md-4">
                     <div class="contact-form">
                         <form id="contact-form" method="post" action="contact-form-handler.php">
-                            <input name="fullname" type="text" class="form-control" placeholder=" Your Name" required>
+                            <input name="name" type="text" class="form-control" placeholder=" Your Name" required>
                             <br>
                             <input name="email" type="email" class="form-control" placeholder=" Your Email" 
                             required><br>
-                            <select name="issue"  class="form-control select" required>
-                                <option value="choose">Please Choose</option>
-                                <option value="option1">Prescription</option>
-                                <option value="option2">Consultation</option>
-                                <option value="option3">Insurance</option>
-                                <option value="option4">Other</option>  
-                            </select><br>    
+                            <input name="subject" type="text" class="form-control" placeholder=" Subject" 
+                            required><br>  
         
                                 <textarea name="message" class="form-control" placeholder=" Message" row="4" style="height:180px"
                                 required></textarea><br>
