--- a/index.html
+++ b/index.html
@@ -303,18 +303,22 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="contact-form">
-                        <form id="contact-form" method="post" action="contact-form-handler.php">
-                            <input name="name" type="text" class="form-control" placeholder=" Your Name" required>
-                            <br>
-                            <input name="email" type="email" class="form-control" placeholder=" Your Email" 
-                            required><br>
-                            <input name="subject" type="text" class="form-control" placeholder=" Subject" 
-                            required><br>  
-        
-                                <textarea name="message" class="form-control" placeholder=" Message" row="4" style="height:180px"
-                                required></textarea><br>
-        
-                                <input type="submit" class="form-control submit" value="SEND MESSAGE">
+                        <form id="contact-form" method="POST" action="contact-form-handler.php">
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Jane Doe" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" class="form-control" id="email" name="email" placeholder="jane@doe.com"  required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" id="subject" name="subject" placeholder="Enter Subject..." required>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" rows="5" cols="30" id="message" name="message" placeholder="Enter Message..." ></textarea>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn">Send Message!</button>
+                            </div>
                         </form>
                     </div>
                         <div class="mobile">
