--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <textarea class="form-control" rows="5" cols="30" id="message" name="message" placeholder="Enter Message..." ></textarea>
                             </div>
                             <div>
-                                <button type="submit" class="btn">Send Message!</button>
+                                <button type="submit" class="btn">Send Message</button>
                             </div>
                         </form>
                     </div>
